--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -11,6 +12,8 @@
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
     "core-js": "^3.6.5",
+    "express": "^4.18.1",
+    "serve-static": "^1.15.0",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.7",
